--- a/Python/Python_Basic/text/PythonBasic_1.ipynb
+++ b/Python/Python_Basic/text/PythonBasic_1.ipynb
@@ -168,7 +168,7 @@
         "\n",
         "age = 2\n",
         "age **= 4\n",
-        "print(age)  # 階乗\n",
+        "print(age)  # べき乗\n",
         "\n",
         "age = 25\n",
         "age /= 4\n",
