--- a/Python/Python_Basic/question/PythonBasic_5_Question.ipynb
+++ b/Python/Python_Basic/question/PythonBasic_5_Question.ipynb
@@ -256,8 +256,7 @@
       "source": [
         "＜実行結果＞  \n",
         "``` py\n",
-        "['Chitose,25', 'Hokudai,105', 'Muroran,74', 'Hakodate,23']\n",
-        "['Hakodate,23', 'Chitose,25', 'Muroran,74', 'Hokudai,105']\n",
+        "{'Hakodate': 23, 'Chitose': 25, 'Muroran': 74, 'Hokudai': 105}"
         "```"
       ],
       "metadata": {
