--- a/Python/Python_Basic/question/PythonBasic_5_Question.ipynb
+++ b/Python/Python_Basic/question/PythonBasic_5_Question.ipynb
@@ -256,7 +256,7 @@
       "source": [
         "＜実行結果＞  \n",
         "``` py\n",
-        "{'Hakodate': 23, 'Chitose': 25, 'Muroran': 74, 'Hokudai': 105}"
+        "{'Hakodate': 23, 'Chitose': 25, 'Muroran': 74, 'Hokudai': 105}",
         "```"
       ],
       "metadata": {
