--- a/Python/Python_Basic/question/PythonBasic_8_Question.ipynb
+++ b/Python/Python_Basic/question/PythonBasic_8_Question.ipynb
@@ -289,7 +289,7 @@
         "atm = ATM()\n",
         "\n",
         "atm.exists_account(\"千歳太郎\",\"12345\")\n",
-        "atm.resister_account(\"千歳太郎\",\"12345\")\n",
+        "atm.register_account(\"千歳太郎\",\"12345\")\n",
         "\n",
         "if atm.exists_account(\"千歳太郎\",\"12345\"):\n",
         "  atm.deposit(\"12345\", 1000)\n",
