Web開発編修正中

--- a/Python/Streamlit/Streamlit_basic_1.ipynb
+++ b/Python/Streamlit/Streamlit_basic_1.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyMNTwaQbILtpB/8KOWGXio4",
+      "authorship_tag": "ABX9TyNJmnNyVw2ZDN93nIGlKc4u",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -52,7 +51,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "15jCf052Kd37"
       },
@@ -77,7 +76,7 @@
       "source": [
         "[**Streamlit**](https://streamlit.io/)とは、Pythonのライブラリであり、Webアプリケーションを作成するためのフレームワークです。\n",
         "\n",
-        "PythonでWebアプリ開発を行いたい場合、[**Flask**](https://msiz07-flask-docs-ja.readthedocs.io/ja/latest/index.html)や[**Django**](https://docs.djangoproject.com/ja/4.1/)といったライブラリが真っ先に挙げられます。  \n",
+        "PythonでWebアプリ開発を行いたい場合、[**Flask**](https://msiz07-flask-docs-ja.readthedocs.io/ja/latest/index.html)や[**Django**](https://docs.djangoproject.com/ja/4.1/)といったライブラリが真っ先に挙げられます。\n",
         "しかし、それらを学ぶには、HTML・CSS・JavaScriptなどのフロントエンドの知識がある程度必要になります。"
       ],
       "metadata": {
@@ -87,7 +86,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Streamlitを使えば、爆速で簡単に動くアプリを作ることができます。  \n",
+        "Streamlitを使えば、爆速で簡単に動くアプリを作ることができます。\n",
         "\n",
         "主にデータサイエンス分野で利用され、データの可視化や解析に利用されます。\n"
       ],
@@ -98,8 +97,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Streamlitは、シンプルで直感的なインターフェースを提供することが目的です。  \n",
-        "そのため、細かな設定はあまりできません。  \n",
+        "Streamlitは、シンプルで直感的なインターフェースを提供することが目的です。\n",
+        "そのため、細かな設定はあまりできません。\n",
         "\n",
         "それだけは念頭に置いてもらえればと思います。"
       ],
@@ -110,7 +109,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "本資料作成において、参考にしたページは[こちら](https://data-analytics.fun/2022/08/28/streamlit-recap/#toc10)になります。  \n",
+        "本資料作成において、参考にしたページは[こちら](https://data-analytics.fun/2022/08/28/streamlit-recap/#toc10)になります。\n",
         "かなりこのサイト通りに進めています。"
       ],
       "metadata": {
@@ -129,7 +128,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "百聞は一見に如かず！  \n",
+        "百聞は一見に如かず！\n",
         "ということで、まずは一回プログラムを表示してみましょう。"
       ],
       "metadata": {
@@ -141,7 +140,7 @@
       "source": [
         "### pyファイルにコードを記述する\n",
         "\n",
-        "　実行しましょう。  \n",
+        "　実行しましょう。\n",
         "　`/content/sample1.py`にアップロードされたはずです。\n",
         "\n"
       ],
@@ -169,9 +168,11 @@
       "cell_type": "markdown",
       "source": [
         "### Streamlitで表示\n",
-        "以下のコマンドを入力してください。  \n",
+        "以下のコマンドを入力してください。\n",
         "\n",
-        "your url is: **ここにアクセスしてください**"
+        "your globalip：**IPアドレスの入力を求められたらこれを使う**\n",
+        "・・・\n",
+        "your url is：**ここにアクセスしてください**"
       ],
       "metadata": {
         "id": "5Y3tI2L8Tu2W"
@@ -180,21 +181,22 @@
     {
       "cell_type": "markdown",
       "source": [
-        "![Streamlit1.png](https://imgur.com/DFOsNMP.png)"
+        "![image.png](https://imgur.com/vt8jDvs.png)"
       ],
       "metadata": {
-        "id": "s4Bl7VsCTa-x"
+        "id": "o8aM0ykkuLPn"
       }
     },
     {
       "cell_type": "code",
       "source": [
-        "# Streamlitで表示\n",
+        "import requests\n",
         "\n",
+        "print('your globalip: ' + requests.get('https://ifconfig.me').text)\n",
         "!streamlit run sample1.py & sleep 3 && npx localtunnel --port 8501"
       ],
       "metadata": {
-        "id": "9gSX3ac3RfQR"
+        "id": "sC7hyr-5pPw3"
       },
       "execution_count": null,
       "outputs": []
@@ -204,12 +206,13 @@
       "source": [
         "### アクセスする\n",
         "\n",
-        "「click to Continue」となっているところからアクセスしましょう。\n",
+        "「click to Submit」となっているところからアクセスしましょう。\n",
+        "（06/19追記　IPアドレスの入力を求められるかもしれません）\n",
         "\n",
-        "![リンクテキスト](https://imgur.com/us69czF.png)"
+        "![image.png](https://imgur.com/4NYaMH2.png)"
       ],
       "metadata": {
-        "id": "46hU88oHUS4c"
+        "id": "B5SlpBAmvWN8"
       }
     },
     {
@@ -235,8 +238,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "[こちら](https://data-analytics.fun/2022/01/29/understanding-streamlit-1/)のページを参考にしました。  \n",
-        "公式ページは[こちら](https://docs.streamlit.io/library/api-reference)になります。  \n"
+        "[こちら](https://data-analytics.fun/2022/01/29/understanding-streamlit-1/)のページを参考にしました。\n",
+        "公式ページは[こちら](https://docs.streamlit.io/library/api-reference)になります。\n"
       ],
       "metadata": {
         "id": "1LjQBAffiLZJ"
@@ -344,7 +347,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "いったんここまでのものを使って表示してみましょう。  \n"
+        "いったんここまでのものを使って表示してみましょう。\n"
       ],
       "metadata": {
         "id": "UIkQlS8riYD4"
@@ -375,6 +378,9 @@
       "source": [
         "# Streamlitで表示\n",
         "\n",
+        "import requests\n",
+        "\n",
+        "print('your globalip: ' + requests.get('https://ifconfig.me').text)\n",
         "!streamlit run sample2.py & sleep 3 && npx localtunnel --port 8501"
       ],
       "metadata": {
@@ -407,7 +413,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Markdown**という表記法を使うと、きれいな文章を作成したい際に非常に便利です。  \n",
+        "**Markdown**という表記法を使うと、きれいな文章を作成したい際に非常に便利です。\n",
         "[こちら](https://qiita.com/shizuma/items/8616bbe3ebe8ab0b6ca1)の記事などを参考にしてみてください。\n",
         "\n",
         "`st.markdown()`で、Markdownを表示します。"
@@ -431,7 +437,7 @@
       "source": [
         "`st.code()`で、プログラムコードを表示します。\n",
         "\n",
-        "一つ目の引数が表示したいコード、二つ目の引数がプログラミング言語になります。  \n",
+        "一つ目の引数が表示したいコード、二つ目の引数がプログラミング言語になります。\n",
         "デフォルトは\"Python\"です。"
       ],
       "metadata": {
@@ -450,7 +456,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Latex**という表記法を使うと、数式を書くことができます。  \n",
+        "**Latex**という表記法を使うと、数式を書くことができます。\n",
         "[こちら](https://qiita.com/PlanetMeron/items/63ac58898541cbe81ada)の記事などを参考にしてみてください。\n",
         "\n",
         "`st.latex()`で、Texを表示します。"
@@ -471,7 +477,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "いったんここまでのものを使って表示してみましょう。  \n"
+        "いったんここまでのものを使って表示してみましょう。\n"
       ],
       "metadata": {
         "id": "SyVoM6mKivEL"
@@ -521,6 +527,9 @@
       "source": [
         "# Streamlitで表示\n",
         "\n",
+        "import requests\n",
+        "\n",
+        "print('your globalip: ' + requests.get('https://ifconfig.me').text)\n",
         "!streamlit run sample3.py & sleep 3 && npx localtunnel --port 8501"
       ],
       "metadata": {
@@ -552,7 +561,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "[こちら](https://data-analytics.fun/2022/01/29/understanding-streamlit-1/)のページを参考にしました。  "
+        "[こちら](https://data-analytics.fun/2022/01/29/understanding-streamlit-1/)のページを参考にしました。"
       ],
       "metadata": {
         "id": "PfREBR7ukUKa"
@@ -572,7 +581,7 @@
       "source": [
         "Pandasのデータフレームをそのまま渡して、インタラクティブな表を表示することができます。\n",
         "\n",
-        "`st.dataframe()`で、インタラクティブな表をを表示します。  \n",
+        "`st.dataframe()`で、インタラクティブな表をを表示します。\n",
         "引数`width`と`height`で幅・高さを変更できます。"
       ],
       "metadata": {
@@ -591,7 +600,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "`st.table()`で、静的な表を表示します。  \n"
+        "`st.table()`で、静的な表を表示します。\n"
       ],
       "metadata": {
         "id": "H5RGhtEU5TG8"
@@ -609,7 +618,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "`st.write()`とすると、形式を渡されたデータに自動で合わせて出力してくれます。  \n",
+        "`st.write()`とすると、形式を渡されたデータに自動で合わせて出力してくれます。\n",
         "\n",
         "通常の文字列、Markdown、DataFrame、何でもOKです。"
       ],
@@ -629,7 +638,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "いったんここまでのものを使って表示してみましょう。  \n"
+        "いったんここまでのものを使って表示してみましょう。\n"
       ],
       "metadata": {
         "id": "-uHtDMZLJ3Ye"
@@ -638,12 +647,12 @@
     {
       "cell_type": "markdown",
       "source": [
-        "ここでは、2023年のGAFAの株価の時系列情報を取得します。  \n",
+        "ここでは、2023年のGAFAの株価の時系列情報を取得します。\n",
         "（参考にしたサイトは[こちら](https://toukei-lab.com/python_stock)）\n",
         "\n",
-        "・G：**Google**のこと。親会社は**Alphabet**。  \n",
-        "・A：**Apple**のこと。  \n",
-        "・F：**Facebook**のこと。2021年に社名を**Meta**に変更している。  \n",
+        "・G：**Google**のこと。親会社は**Alphabet**。\n",
+        "・A：**Apple**のこと。\n",
+        "・F：**Facebook**のこと。2021年に社名を**Meta**に変更している。\n",
         "・A：**Amazon**のこと。"
       ],
       "metadata": {
@@ -653,7 +662,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "`datatime`モジュールを使って、本日の日付までの株価を確認します。  \n",
+        "`datatime`モジュールを使って、本日の日付までの株価を確認します。\n",
         "（3日ほどずれると思います）"
       ],
       "metadata": {
@@ -695,7 +704,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "このデータフレームを表示してみましょう。  \n"
+        "このデータフレームを表示してみましょう。\n"
       ],
       "metadata": {
         "id": "d3KPrclDreE6"
@@ -763,6 +772,9 @@
       "source": [
         "# Streamlitで表示\n",
         "\n",
+        "import requests\n",
+        "\n",
+        "print('your globalip: ' + requests.get('https://ifconfig.me').text)\n",
         "!streamlit run sample4.py & sleep 3 && npx localtunnel --port 8501"
       ],
       "metadata": {
@@ -794,7 +806,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "`st.metric()` は、Streamlitで数値を表示するための関数です。  \n",
+        "`st.metric()` は、Streamlitで数値を表示するための関数です。\n",
         "主に、比較的シンプルなデータの可視化に使用されます。"
       ],
       "metadata": {
@@ -806,9 +818,9 @@
       "source": [
         "主に以下のような引数を取ります。\n",
         "\n",
-        "・`label`：数値の説明  \n",
-        "・`value`：表示する数値  \n",
-        "・`delta`：直前の値との差分（省略可能）  \n",
+        "・`label`：数値の説明\n",
+        "・`value`：表示する数値\n",
+        "・`delta`：直前の値との差分（省略可能）\n",
         "・`delta_color`：\n",
         "\n",
         "1.   `normal`：プラスであれば緑色、マイナスであれば赤色\n",
@@ -850,7 +862,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "いったんここまでのものを使って表示してみましょう。  \n"
+        "いったんここまでのものを使って表示してみましょう。\n"
       ],
       "metadata": {
         "id": "Gvevof7GJ4Ql"
@@ -859,7 +871,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "本日の日付までの株価を確認します。  \n",
+        "本日の日付までの株価を確認します。\n",
         "（3日ほどずれると思います）\n",
         "\n",
         "Googleの株価の確認と、4社の株価の確認を以下で行います。"
@@ -926,6 +938,9 @@
       "source": [
         "# Streamlitで表示\n",
         "\n",
+        "import requests\n",
+        "\n",
+        "print('your globalip: ' + requests.get('https://ifconfig.me').text)\n",
         "!streamlit run sample5.py & sleep 3 && npx localtunnel --port 8501"
       ],
       "metadata": {
@@ -937,7 +952,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "以下のように表示されたでしょうか。  \n",
+        "以下のように表示されたでしょうか。\n",
         "（日時は多少ズレがあると思います）\n",
         "\n",
         "![](https://imgur.com/6Z9JKYX.png)"
@@ -958,7 +973,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "[こちら](https://data-analytics.fun/2022/01/29/understanding-streamlit-1/)のページを参考にしました。 "
+        "[こちら](https://data-analytics.fun/2022/01/29/understanding-streamlit-1/)のページを参考にしました。"
       ],
       "metadata": {
         "id": "_KAkWosolBdC"
@@ -976,7 +991,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "`st.line_chart()`で、折れ線グラフを表示します。  \n",
+        "`st.line_chart()`で、折れ線グラフを表示します。\n",
         "\n",
         "引数は、`width`、`height`で幅や高さを設定できます。"
       ],
@@ -996,7 +1011,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "`st.area_chart()`で、エリアチャートを表示します。  \n",
+        "`st.area_chart()`で、エリアチャートを表示します。\n",
         "\n",
         "引数は、`line_chart()`と同じです。"
       ],
@@ -1016,7 +1031,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "いったんここまでのものを使って表示してみましょう。  \n"
+        "いったんここまでのものを使って表示してみましょう。\n"
       ],
       "metadata": {
         "id": "wA_yC5p7J5CE"
@@ -1071,16 +1086,31 @@
         "st.area_chart(df)"
       ],
       "metadata": {
-        "id": "xA1vcitGLK_q"
+        "id": "xA1vcitGLK_q",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ecb2c8c4-07f0-46b0-a8ca-cdfc17da4b02"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Writing sample6.py\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
         "# Streamlitで表示\n",
         "\n",
+        "import requests\n",
+        "\n",
+        "print('your globalip: ' + requests.get('https://ifconfig.me').text)\n",
         "!streamlit run sample6.py & sleep 3 && npx localtunnel --port 8501"
       ],
       "metadata": {
@@ -1092,7 +1122,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "以下のように表示されたでしょうか。  \n",
+        "以下のように表示されたでしょうか。\n",
         "（日時は多少ズレがあると思います）\n",
         "\n",
         "![](https://imgur.com/u97r4Gr.png)"
@@ -1113,7 +1143,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "`st.bar_chart()`で、エリアチャートを表示します。  \n",
+        "`st.bar_chart()`で、エリアチャートを表示します。\n",
         "\n",
         "引数は、`line_chart()`と同じです。"
       ],
@@ -1133,10 +1163,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Matplotlibでグラフを作成し、それをst.pyplotに渡すこともできます。  \n",
+        "Matplotlibでグラフを作成し、それをst.pyplotに渡すこともできます。\n",
         "`st.pyplot()`を使います。\n",
         "\n",
-        "今までのグラフは非常に簡単ですが、細かい設定は全くできません。  \n",
+        "今までのグラフは非常に簡単ですが、細かい設定は全くできません。\n",
         "色の変更など、設定をいじることができます。"
       ],
       "metadata": {
@@ -1150,7 +1180,7 @@
         "\n",
         "Plotlyはインタラクティブなグラフを作成するためのライブラリです。\n",
         "\n",
-        "本資料を作るのに大いに参考にしたサイトの[こちら](https://data-analytics.fun/2021/11/19/plotly-summary/)のページに  \n",
+        "本資料を作るのに大いに参考にしたサイトの[こちら](https://data-analytics.fun/2021/11/19/plotly-summary/)のページに\n",
         "詳しく書いてありますので、グラフを凝りたい方は是非。"
       ],
       "metadata": {
@@ -1169,7 +1199,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "いったんここまでのものを使って表示してみましょう。  \n"
+        "いったんここまでのものを使って表示してみましょう。\n"
       ],
       "metadata": {
         "id": "CBCn0rsJOFJW"
@@ -1248,6 +1278,9 @@
       "source": [
         "# Streamlitで表示\n",
         "\n",
+        "import requests\n",
+        "\n",
+        "print('your globalip: ' + requests.get('https://ifconfig.me').text)\n",
         "!streamlit run sample7.py & sleep 3 && npx localtunnel --port 8501"
       ],
       "metadata": {
