Web開発編修正中

--- a/Python/Streamlit/Streamlit_basic_1.ipynb
+++ b/Python/Streamlit/Streamlit_basic_1.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNJmnNyVw2ZDN93nIGlKc4u",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyNgTVOgi9GAxXrTEgeyEyxf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -169,13 +170,23 @@
       "source": [
         "### Streamlitで表示\n",
         "以下のコマンドを入力してください。\n",
-        "\n",
-        "your globalip：**IPアドレスの入力を求められたらこれを使う**\n",
-        "・・・\n",
-        "your url is：**ここにアクセスしてください**"
+        "\n"
       ],
       "metadata": {
         "id": "5Y3tI2L8Tu2W"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "your globalip：**IPアドレスの入力を求められたらこれを使う**\n",
+        "\n",
+        "・・・\n",
+        "\n",
+        "your url is：**ここにアクセスしてください**"
+      ],
+      "metadata": {
+        "id": "ClAtwexY0HgT"
       }
     },
     {
