Web開発編修正中

--- a/Python/Streamlit/Streamlit_basic_1.ipynb
+++ b/Python/Streamlit/Streamlit_basic_1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNgTVOgi9GAxXrTEgeyEyxf",
+      "authorship_tag": "ABX9TyPT657gU2iuoQPN1XM8XbKz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -661,10 +661,10 @@
         "ここでは、2023年のGAFAの株価の時系列情報を取得します。\n",
         "（参考にしたサイトは[こちら](https://toukei-lab.com/python_stock)）\n",
         "\n",
-        "・G：**Google**のこと。親会社は**Alphabet**。\n",
-        "・A：**Apple**のこと。\n",
-        "・F：**Facebook**のこと。2021年に社名を**Meta**に変更している。\n",
-        "・A：**Amazon**のこと。"
+        "- G：**Google**のこと。親会社は**Alphabet**。\n",
+        "- A：**Apple**のこと。\n",
+        "- F：**Facebook**のこと。2021年に社名を**Meta**に変更している。\n",
+        "- A：**Amazon**のこと。"
       ],
       "metadata": {
         "id": "xei7rsyOCMoQ"
@@ -829,10 +829,10 @@
       "source": [
         "主に以下のような引数を取ります。\n",
         "\n",
-        "・`label`：数値の説明\n",
-        "・`value`：表示する数値\n",
-        "・`delta`：直前の値との差分（省略可能）\n",
-        "・`delta_color`：\n",
+        "- `label`：数値の説明\n",
+        "- `value`：表示する数値\n",
+        "- `delta`：直前の値との差分（省略可能）\n",
+        "- `delta_color`：\n",
         "\n",
         "1.   `normal`：プラスであれば緑色、マイナスであれば赤色\n",
         "2.   `reverse`：normalの逆\n",
