Web開発編修正中

--- a/Python/Streamlit/Streamlit_basic_1.ipynb
+++ b/Python/Streamlit/Streamlit_basic_1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPT657gU2iuoQPN1XM8XbKz",
+      "authorship_tag": "ABX9TyObBtzoYI4jejLKWfXVfjc6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -52,7 +52,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "15jCf052Kd37"
       },
@@ -60,7 +60,8 @@
       "source": [
         "# 最初に実行してください\n",
         "# モジュールのインポート\n",
-        "import streamlit as st"
+        "import streamlit as st\n",
+        "import requests"
       ]
     },
     {
@@ -201,8 +202,6 @@
     {
       "cell_type": "code",
       "source": [
-        "import requests\n",
-        "\n",
         "print('your globalip: ' + requests.get('https://ifconfig.me').text)\n",
         "!streamlit run sample1.py & sleep 3 && npx localtunnel --port 8501"
       ],
@@ -389,8 +388,6 @@
       "source": [
         "# Streamlitで表示\n",
         "\n",
-        "import requests\n",
-        "\n",
         "print('your globalip: ' + requests.get('https://ifconfig.me').text)\n",
         "!streamlit run sample2.py & sleep 3 && npx localtunnel --port 8501"
       ],
@@ -537,8 +534,6 @@
       "cell_type": "code",
       "source": [
         "# Streamlitで表示\n",
-        "\n",
-        "import requests\n",
         "\n",
         "print('your globalip: ' + requests.get('https://ifconfig.me').text)\n",
         "!streamlit run sample3.py & sleep 3 && npx localtunnel --port 8501"
@@ -783,8 +778,6 @@
       "source": [
         "# Streamlitで表示\n",
         "\n",
-        "import requests\n",
-        "\n",
         "print('your globalip: ' + requests.get('https://ifconfig.me').text)\n",
         "!streamlit run sample4.py & sleep 3 && npx localtunnel --port 8501"
       ],
@@ -949,8 +942,6 @@
       "source": [
         "# Streamlitで表示\n",
         "\n",
-        "import requests\n",
-        "\n",
         "print('your globalip: ' + requests.get('https://ifconfig.me').text)\n",
         "!streamlit run sample5.py & sleep 3 && npx localtunnel --port 8501"
       ],
@@ -1103,7 +1094,7 @@
         },
         "outputId": "ecb2c8c4-07f0-46b0-a8ca-cdfc17da4b02"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1118,8 +1109,6 @@
       "cell_type": "code",
       "source": [
         "# Streamlitで表示\n",
-        "\n",
-        "import requests\n",
         "\n",
         "print('your globalip: ' + requests.get('https://ifconfig.me').text)\n",
         "!streamlit run sample6.py & sleep 3 && npx localtunnel --port 8501"
@@ -1289,7 +1278,6 @@
       "source": [
         "# Streamlitで表示\n",
         "\n",
-        "import requests\n",
         "\n",
         "print('your globalip: ' + requests.get('https://ifconfig.me').text)\n",
         "!streamlit run sample7.py & sleep 3 && npx localtunnel --port 8501"
