Web開発編修正中

--- a/Python/Streamlit/Streamlit_basic_3.ipynb
+++ b/Python/Streamlit/Streamlit_basic_3.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyO/m8M/4cFsgOHOaKWZbFXM",
+      "authorship_tag": "ABX9TyPnIQEFy5c4XYZdi83WLhop",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,7 +39,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "本資料作成において、参考にしたページは[こちら](https://data-analytics.fun/2022/08/28/streamlit-recap/#toc10)になります。  \n",
+        "本資料作成において、参考にしたページは[こちら](https://data-analytics.fun/2022/08/28/streamlit-recap/#toc10)になります。\n",
         "かなりこのサイト通りに進めています。"
       ],
       "metadata": {
@@ -62,7 +62,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "15jCf052Kd37"
       },
@@ -70,7 +70,8 @@
       "source": [
         "# 最初に実行してください\n",
         "# モジュールのインポート\n",
-        "import streamlit as st"
+        "import streamlit as st\n",
+        "import requests"
       ]
     },
     {
@@ -94,7 +95,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "[こちら](https://data-analytics.fun/2022/07/04/streamlit-layout/)のページを参考にしました。  \n"
+        "[こちら](https://data-analytics.fun/2022/07/04/streamlit-layout/)のページを参考にしました。\n"
       ],
       "metadata": {
         "id": "tC1Hf6DJ0PdF"
@@ -170,7 +171,7 @@
         "              )\n",
         "\n",
         "if len(dates) == 2:\n",
-        "  start_date, end_date = dates \n",
+        "  start_date, end_date = dates\n",
         "  str_start_date = start_date.strftime('%Y-%m-%d')\n",
         "  str_end_date = end_date.strftime('%Y-%m-%d')\n",
         "  st.subheader(f'{start_date.strftime(\"%Y年%m月%d日\")}から{end_date.strftime(\"%Y年%m月%d日\")}までの株価推移')\n",
@@ -187,6 +188,7 @@
       "source": [
         "# Streamlitで表示\n",
         "\n",
+        "print('your globalip: ' + requests.get('https://ifconfig.me').text)\n",
         "!streamlit run sample1.py & sleep 3 && npx localtunnel --port 8501"
       ],
       "metadata": {
@@ -198,7 +200,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "以下のように表示されたでしょうか。  \n",
+        "以下のように表示されたでしょうか。\n",
         "\n",
         "\n",
         "![](https://imgur.com/dmorFvq.png)"
@@ -228,10 +230,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "・**整数**を指定：引数で渡された数の分**等間隔**の列を作成する   \n",
-        "　　　 　　　　`st.columns(2)`とすると、幅が同じ2列が作成される  \n",
+        "・**整数**を指定：引数で渡された数の分**等間隔**の列を作成する\n",
+        "　　　 　　　　`st.columns(2)`とすると、幅が同じ2列が作成される\n",
         "\n",
-        "・**整数のリスト**を指定：要素の大きさに準する幅で、要素分の列を作成する  \n",
+        "・**整数のリスト**を指定：要素の大きさに準する幅で、要素分の列を作成する\n",
         "　　　　　　　　　　　`st.columns([3,7])`とすると、幅の比が3対7で分割される"
       ],
       "metadata": {
@@ -290,7 +292,7 @@
         "            )\n",
         "\n",
         "if (st.button('表示')) and (len(dates) == 2):\n",
-        "  start_date, end_date = dates \n",
+        "  start_date, end_date = dates\n",
         "  str_start_date = start_date.strftime('%Y-%m-%d')\n",
         "  str_end_date = end_date.strftime('%Y-%m-%d')\n",
         "  st.subheader(f'{start_date.strftime(\"%Y年%m月%d日\")}から{end_date.strftime(\"%Y年%m月%d日\")}までの株価推移')\n",
@@ -307,6 +309,7 @@
       "source": [
         "# Streamlitで表示\n",
         "\n",
+        "print('your globalip: ' + requests.get('https://ifconfig.me').text)\n",
         "!streamlit run sample2.py & sleep 3 && npx localtunnel --port 8501"
       ],
       "metadata": {
@@ -318,7 +321,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "以下のように表示されたでしょうか。  \n",
+        "以下のように表示されたでしょうか。\n",
         "\n",
         "\n",
         "![](https://imgur.com/AJoqN6D.png)"
@@ -409,6 +412,7 @@
       "source": [
         "# Streamlitで表示\n",
         "\n",
+        "print('your globalip: ' + requests.get('https://ifconfig.me').text)\n",
         "!streamlit run sample3.py & sleep 3 && npx localtunnel --port 8501"
       ],
       "metadata": {
@@ -420,7 +424,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "以下のように表示されたでしょうか。  \n",
+        "以下のように表示されたでしょうか。\n",
         "\n",
         "\n",
         "![](https://imgur.com/dAgXf4s.png)"
@@ -503,7 +507,7 @@
         "              )\n",
         "\n",
         "if len(dates) == 2:\n",
-        "  start_date, end_date = dates \n",
+        "  start_date, end_date = dates\n",
         "  str_start_date = start_date.strftime('%Y-%m-%d')\n",
         "  str_end_date = end_date.strftime('%Y-%m-%d')\n",
         "  cols[1].subheader(f'{start_date.strftime(\"%Y年%m月%d日\")}から{end_date.strftime(\"%Y年%m月%d日\")}までの株価推移')\n",
@@ -521,6 +525,7 @@
       "source": [
         "# Streamlitで表示\n",
         "\n",
+        "print('your globalip: ' + requests.get('https://ifconfig.me').text)\n",
         "!streamlit run sample4.py & sleep 3 && npx localtunnel --port 8501"
       ],
       "metadata": {
@@ -532,7 +537,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "以下のように表示されたでしょうか。  \n",
+        "以下のように表示されたでしょうか。\n",
         "\n",
         "\n",
         "![](https://imgur.com/J8Q5RPD.png)"
@@ -564,9 +569,9 @@
       "source": [
         "`st.empty()` を使用すると、例えば以下のような場合に便利です。\n",
         "\n",
-        "・複数のウィジェットを一度に表示したい場合に、  \n",
-        " 　ウィジェットを作成し、後で表示する値を設定することができる  \n",
-        "・条件に基づいてウィジェットの表示を切り替えたい場合に、  \n",
+        "・複数のウィジェットを一度に表示したい場合に、\n",
+        " 　ウィジェットを作成し、後で表示する値を設定することができる\n",
+        "・条件に基づいてウィジェットの表示を切り替えたい場合に、\n",
         "　条件に応じてウィジェットを作成し、表示するかどうかを切り替えることができます。"
       ],
       "metadata": {
@@ -576,9 +581,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        " \n",
-        "では表示してみましょう。  \n",
-        "最初はテキスト情報を表示していますが、それをグラフに置き換えています。 "
+        "\n",
+        "では表示してみましょう。\n",
+        "最初はテキスト情報を表示していますが、それをグラフに置き換えています。"
       ],
       "metadata": {
         "id": "GFiiv0u13CYe"
@@ -617,15 +622,15 @@
         "cols = st.columns(2)\n",
         "graph_button = cols[0].button('グラフ描画')\n",
         "delete_button = cols[1].button('グラフを削除')\n",
-        " \n",
+        "\n",
         "graph_area = st.empty()\n",
         "graph_area.subheader(\"ここにグラフを挿入します。\")\n",
-        " \n",
+        "\n",
         "if graph_button:\n",
         "     graph_area.subheader(\"グラフ描画中 ...\")\n",
         "     time.sleep(2)\n",
         "     graph_area.line_chart(df)\n",
-        " \n",
+        "\n",
         "if delete_button:\n",
         "     graph_area.subheader(\"deleted!!\")"
       ],
@@ -640,6 +645,7 @@
       "source": [
         "# Streamlitで表示\n",
         "\n",
+        "print('your globalip: ' + requests.get('https://ifconfig.me').text)\n",
         "!streamlit run sample5.py & sleep 3 && npx localtunnel --port 8501"
       ],
       "metadata": {
@@ -651,10 +657,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "以下のように表示されたでしょうか。  \n",
+        "以下のように表示されたでしょうか。\n",
         "\n",
-        "![](https://imgur.com/k75INDP.png)  \n",
-        "![](https://imgur.com/DrlaA1n.png)  \n",
+        "![](https://imgur.com/k75INDP.png)\n",
+        "![](https://imgur.com/DrlaA1n.png)\n",
         "![](https://imgur.com/RnwsRx6.png)"
       ],
       "metadata": {
@@ -682,7 +688,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "[こちら](https://data-analytics.fun/2022/07/09/streamlit-form/)のページを参考にしました。  \n"
+        "[こちら](https://data-analytics.fun/2022/07/09/streamlit-form/)のページを参考にしました。\n"
       ],
       "metadata": {
         "id": "Efmplz5j34_d"
@@ -709,7 +715,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "フォームでは、名前と誕生日を入力してもらって、その情報をもとに  \n",
+        "フォームでは、名前と誕生日を入力してもらって、その情報をもとに\n",
         "成人までの日数あるいは成人してからの日数を表示しています。"
       ],
       "metadata": {
@@ -767,6 +773,7 @@
       "source": [
         "# Streamlitで表示\n",
         "\n",
+        "print('your globalip: ' + requests.get('https://ifconfig.me').text)\n",
         "!streamlit run sample6.py & sleep 3 && npx localtunnel --port 8501"
       ],
       "metadata": {
@@ -778,10 +785,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "以下のように表示されたでしょうか。  \n",
+        "以下のように表示されたでしょうか。\n",
         "\n",
-        "![](https://imgur.com/RLEAyPk.png)  \n",
-        "![](https://imgur.com/nLtqNi4.png)  "
+        "![](https://imgur.com/RLEAyPk.png)\n",
+        "![](https://imgur.com/nLtqNi4.png)"
       ],
       "metadata": {
         "id": "y33F3P6c32s_"
@@ -810,8 +817,8 @@
       "source": [
         "`st.form()` 内にフォームの要素を配置するメリットは以下の通りです。\n",
         "\n",
-        "・submitボタンが押されるまでの入力内容の保持できる  \n",
-        "・必須項目のバリデーション、入力内容の確認画面の生成などを実装できる  \n",
+        "・submitボタンが押されるまでの入力内容の保持できる\n",
+        "・必須項目のバリデーション、入力内容の確認画面の生成などを実装できる\n",
         "・フォームの要素を独自のスタイルでレイアウトすることができる"
       ],
       "metadata": {
@@ -821,7 +828,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "では先ほどのコードを実際に書き換えてみましょう。  \n",
+        "では先ほどのコードを実際に書き換えてみましょう。\n",
         "\n",
         "変更点についてはのちに述べます。"
       ],
@@ -882,6 +889,7 @@
       "source": [
         "# Streamlitで表示\n",
         "\n",
+        "print('your globalip: ' + requests.get('https://ifconfig.me').text)\n",
         "!streamlit run sample7.py & sleep 3 && npx localtunnel --port 8501"
       ],
       "metadata": {
@@ -893,9 +901,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "以下のように表示されたでしょうか。  \n",
+        "以下のように表示されたでしょうか。\n",
         "\n",
-        "![](https://imgur.com/fykxiRD.png)   "
+        "![](https://imgur.com/fykxiRD.png)"
       ],
       "metadata": {
         "id": "ZzCn7TI84-dE"
@@ -924,7 +932,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "引数`clear_on_submit`をTrueにすると、ボタンを押したときに値がクリアされます。  \n",
+        "引数`clear_on_submit`をTrueにすると、ボタンを押したときに値がクリアされます。\n",
         "デフォルトはFalseです。"
       ],
       "metadata": {
@@ -963,7 +971,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Streamlitは、普通にするとウィジェットの値が変わると、  \n",
+        "Streamlitは、普通にするとウィジェットの値が変わると、\n",
         "すべての処理が1から再度実行されます。"
       ],
       "metadata": {
@@ -973,8 +981,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "そのため、ウィジェットの状態を記憶するために、  \n",
-        "**状態を保持する方法**を学ぶ必要があります。  \n",
+        "そのため、ウィジェットの状態を記憶するために、\n",
+        "**状態を保持する方法**を学ぶ必要があります。\n",
         "\n",
         "またその際に、**コールバック**という機能を使えると便利です。\n"
       ],
@@ -985,7 +993,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "[こちら](https://data-analytics.fun/2022/07/11/streamlit-state-callback/)のページを参考にしました。  \n"
+        "[こちら](https://data-analytics.fun/2022/07/11/streamlit-state-callback/)のページを参考にしました。\n"
       ],
       "metadata": {
         "id": "WhxDZ81z5Ik7"
@@ -1016,7 +1024,7 @@
         "\n",
         "%%writefile sample8-1.py\n",
         "import streamlit as st\n",
-        " \n",
+        "\n",
         "value = 0\n",
         "st.subheader(f'初期値は{value}です。')\n",
         "btn = st.button('+1する')\n",
@@ -1035,6 +1043,7 @@
       "source": [
         "# Streamlitで表示\n",
         "\n",
+        "print('your globalip: ' + requests.get('https://ifconfig.me').text)\n",
         "!streamlit run sample8-1.py & sleep 3 && npx localtunnel --port 8501"
       ],
       "metadata": {
@@ -1046,9 +1055,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "以下のように表示されたでしょうか。  \n",
+        "以下のように表示されたでしょうか。\n",
         "\n",
-        "![](https://imgur.com/bQlIJsp.png)   "
+        "![](https://imgur.com/bQlIJsp.png)"
       ],
       "metadata": {
         "id": "0k_dIuKi5Dhz"
@@ -1077,7 +1086,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "押すたびに1, 2, 3と増えていくようにするにしたいので、  \n",
+        "押すたびに1, 2, 3と増えていくようにするにしたいので、\n",
         "今の状態を覚えている必要があります。"
       ],
       "metadata": {
@@ -1087,7 +1096,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**`st.session_state`**という辞書型の変数を用いることで、  \n",
+        "**`st.session_state`**という辞書型の変数を用いることで、\n",
         "値を保持したり、保持された値を取りだしたりすることができます。"
       ],
       "metadata": {
@@ -1097,7 +1106,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "`session_state`への値の設定方法は、以下の2通りあります。  \n",
+        "`session_state`への値の設定方法は、以下の2通りあります。\n",
         "\n",
         "``` py\n",
         "st.session_state['key_1'] = 'value_1'\n",
@@ -1132,7 +1141,7 @@
         "if 'increment' not in st.session_state: # 初期化\n",
         "    st.session_state['increment'] = 0\n",
         "    st.subheader(f\"初期値は{st.session_state['increment']}です。\")\n",
-        "     \n",
+        "\n",
         "if btn:\n",
         "    st.subheader(f'初期値は{value}です。')\n",
         "    st.session_state['increment'] += 1 # 値を増やす\n",
@@ -1149,6 +1158,7 @@
       "source": [
         "# Streamlitで表示\n",
         "\n",
+        "print('your globalip: ' + requests.get('https://ifconfig.me').text)\n",
         "!streamlit run sample8-2.py & sleep 3 && npx localtunnel --port 8501"
       ],
       "metadata": {
@@ -1160,9 +1170,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "以下のように表示されたでしょうか。  \n",
+        "以下のように表示されたでしょうか。\n",
         "\n",
-        "![](https://imgur.com/0eP2sQd.png)   "
+        "![](https://imgur.com/0eP2sQd.png)"
       ],
       "metadata": {
         "id": "qMnE57mN5rL1"
@@ -1171,7 +1181,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "ここでは、`st.session_state`を使って、ヒットアンドブローというゲームを作ってみましょう。  \n",
+        "ここでは、`st.session_state`を使って、ヒットアンドブローというゲームを作ってみましょう。\n",
         "\n",
         "ゲーム自体の説明はコードの中に記載しています。"
       ],
@@ -1277,6 +1287,7 @@
       "source": [
         "# Streamlitで表示\n",
         "\n",
+        "print('your globalip: ' + requests.get('https://ifconfig.me').text)\n",
         "!streamlit run sample9.py & sleep 3 && npx localtunnel --port 8501"
       ],
       "metadata": {
@@ -1288,10 +1299,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "以下のように表示されたでしょうか。  \n",
+        "以下のように表示されたでしょうか。\n",
         "\n",
-        "![](https://imgur.com/EL96liK.png)  \n",
-        "![](https://imgur.com/lidcW1P.png)      "
+        "![](https://imgur.com/EL96liK.png)\n",
+        "![](https://imgur.com/lidcW1P.png)"
       ],
       "metadata": {
         "id": "ix_2itJ27wPo"
@@ -1309,10 +1320,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "ボタンがクリックされたとき、ウィジェットの値が変わったときに呼び出される関数を、  \n",
-        "**コールバック関数**といいます。  \n",
+        "ボタンがクリックされたとき、ウィジェットの値が変わったときに呼び出される関数を、\n",
+        "**コールバック関数**といいます。\n",
         "\n",
-        "クリックされたとき、値が変わったときに、  \n",
+        "クリックされたとき、値が変わったときに、\n",
         "**真っ先に指定した関数が呼び出される**点がポイントです。"
       ],
       "metadata": {
@@ -1338,7 +1349,7 @@
         "``` py\n",
         "if 'num_of_data' not in st.session_state.keys():\n",
         "    st.session_state['num_of_data'] = 5\n",
-        " \n",
+        "\n",
         "st.header('2022年の株価推移')\n",
         "st.line_chart(df)\n",
         "with st.expander('データを見る'):\n",
@@ -1355,11 +1366,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "実際にこれを実行してみます。  \n",
+        "実際にこれを実行してみます。\n",
         "\n",
-        "1回目に「さらに見る」ボタンを押しても表示件数が増えていません。  \n",
+        "1回目に「さらに見る」ボタンを押しても表示件数が増えていません。\n",
         "\n",
-        "これは、ボタンを押したあとにnum_of_dataを更新していることが原因です。  \n",
+        "これは、ボタンを押したあとにnum_of_dataを更新していることが原因です。\n",
         "**Steamlitでは、ボタンを押された際に上から順番にすべての処理を行います。**"
       ],
       "metadata": {
@@ -1380,10 +1391,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "引数は、ボタンの場合は**`on_click`**、  \n",
+        "引数は、ボタンの場合は**`on_click`**、\n",
         "ンプットボックスやセレクトボックス(ドロップダウン)の場合は**`on_change`**を設定します。\n",
         "\n",
-        "その前にコールバック関数を書いておき、  \n",
+        "その前にコールバック関数を書いておき、\n",
         "  `on_click`の引数として作成したコールバック関数名を指定します。"
       ],
       "metadata": {
@@ -1393,7 +1404,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "では表示してみましょう。   \n",
+        "では表示してみましょう。\n",
         "以前も扱っていた株価のデータに戻ります。"
       ],
       "metadata": {
@@ -1431,11 +1442,11 @@
         "\n",
         "if 'num_of_data' not in st.session_state:\n",
         "    st.session_state['num_of_data'] = 5\n",
-        " \n",
+        "\n",
         "# コールバック関数\n",
         "def update_num_of_data():\n",
         "    st.session_state['num_of_data'] += 5\n",
-        " \n",
+        "\n",
         "# 2023年の株価推移（線グラフ）\n",
         "st.header('2023年の株価推移')\n",
         "st.line_chart(df)\n",
@@ -1456,6 +1467,7 @@
       "source": [
         "# Streamlitで表示\n",
         "\n",
+        "print('your globalip: ' + requests.get('https://ifconfig.me').text)\n",
         "!streamlit run sample10.py & sleep 3 && npx localtunnel --port 8501"
       ],
       "metadata": {
@@ -1467,11 +1479,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "以下のように表示されたでしょうか。  \n",
+        "以下のように表示されたでしょうか。\n",
         "\n",
-        "![](https://imgur.com/jN5o4yg.png)  \n",
-        "![](https://imgur.com/KXAnx8f.png)  \n",
-        "![](https://imgur.com/lA4zQ0L.png)      "
+        "![](https://imgur.com/jN5o4yg.png)\n",
+        "![](https://imgur.com/KXAnx8f.png)\n",
+        "![](https://imgur.com/lA4zQ0L.png)"
       ],
       "metadata": {
         "id": "4b2siMl48aXF"
